tests/paczka1/fuzzy1/92835803.err
Error in line 2: 4hiHTC A715 60,3
Error in line 4: OdBIusP A485 34,7
Error in line 15: VEAS A59 3,5
Error in line 12: OdBIusP A715 97,8
Error in line 14: t2wTOJ A569 80,9
Error in line 13: 4hiHTC A485 62,4
Error in line 11: VEAS A569 89,0
Error in line 24: VEAS A485 77,2
Error in line 27: VEAS A715 19,6
Error in line 28: VEAS A864 63,7
Error in line 38: J4v A485 97,7
